--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 sudo: false
 language: ruby
 rvm:
-  - 1.9
-  - 2.0
-  - 2.1
-  - 2.2
   - 2.3.0 # The version of RVM installed on Travis doesn't yet recognise 2.3 as an alias of 2.3.0
+gemfile:
+  - gemfiles/Gemfile.ruby-2.1.rb
+  - gemfiles/Gemfile.ruby-2.2.rb
+matrix:
+  include:
+    - rvm: 2.1
+      gemfile: gemfiles/Gemfile.ruby-2.1.rb
+    - rvm: 2.2
+      gemfile: gemfiles/Gemfile.ruby-2.2.rb
 before_install: gem install bundler -v 1.13.6
 notifications:
   email:
