Disables redundant freeze check in rubocop (support Ruby < 2.3)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,9 @@ Style/SignalException:
 Style/SafeNavigation:
   Enabled: false
 
+Style/RedundantFreeze:
+  Enabled: false
+
 Style/FileName:
   Exclude:
     - gemfiles/Gemfile.*.rb
